# destroyer

./: .gitignore  CONTRIBUTING.md  Cargo.toml  LICENSE.ru  LICENSE.zh-CN  README.en.md  README.md  README.ru.md  README.zh-CN.md  TRANSLATIONS.md
.github/ISSUE_TEMPLATE/: bug_report.yml  feature_request.yml
benches/: buffer.rs
src/: app.rs  args.rs  dev.rs  lib.rs  main.rs  wipe.rs
src/platform/: linux.rs  macos.rs
tests/: basic.rs  errors.rs
