[package]
name = "destroyer"
version = "0.1.0"
edition = "2024"
license = "MIT"
description = "Secure multi-pass disk wiper (Linux/macOS). USE WITH EXTREME CAUTION."

[dependencies]
libc = "0.2"

[dev-dependencies]
tempfile = "3.10"
assert_cmd = "2"
predicates = "3"

[lib]
name = "destroyer"
path = "src/lib.rs"

[[bin]]
name = "destroyer"
path = "src/main.rs"