[package]
name = "destroyer"
version = "1.0.0"
edition = "2024"
license = "MIT"
description = "Secure multi-pass disk wiper (Linux/macOS). USE WITH EXTREME CAUTION."

[dependencies]
libc = "0.2"

[features]
default = ["durable", "direct"]
durable = []
direct = []
test-support = []

[dev-dependencies]
criterion = { version = "0.7", default-features = false }

[lib]
name = "destroyer"
path = "src/lib.rs"

[[bin]]
name = "destroyer"
path = "src/main.rs"

[profile.release]
lto = "thin"
codegen-units = 1
panic = "abort"

[profile.bench]
lto = "thin"
codegen-units = 1
panic = "abort"

[[bench]]
name = "buffer"
harness = false
